<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/coin_icon" />
        <TextView
            android:text="@string/hello_there"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/click_to_claim"
            android:textSize="17sp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_claimFreeCoin"
            android:text="@string/claim"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@drawable/home_button_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>