<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    tools:context=".StartActivity">


    <include layout="@layout/view_coin_life_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/bt_startGame"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/home_button_background"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/start_quiz"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_watchAndEarn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/home_button_background"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/watch_and_earn"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <com.startapp.android.publish.ads.banner.Banner
            android:id="@+id/startAppBanner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/bt_redeemCoin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/home_button_background"
            android:fontFamily="sans-serif-condensed"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="3"
            android:text="@string/redeem_coins"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

    <com.startapp.android.publish.ads.banner.Banner
        android:id="@+id/startAppBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>